ショッピングカート周り編集

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>
+	</build><!--$NO-MVN-MAN-VER$-->
 
 </project>
